--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "main": "app.js",
   "scripts": {
     "start": "electron ."
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "electron": "^29.1.5",
