--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "app.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
